syntax = "proto3";

import "google/protobuf/empty.proto";
import "proto/auth/auth.proto";

option go_package = "proto/user";

package user;

service User {
	rpc Create (auth.Credentials) returns (google.protobuf.Empty);
	rpc GetPasswordHash(auth.Credentials) returns (PasswordHash);
};

message PasswordHash {
	string hash = 1;
}